<resources>
    <string name="app_name">Animal_List_App</string>
    <string name="tardigrade">Tardigrade</string>
    <string name="phoronid">Phoronid</string>
    <string name="flatworm">Flatworm</string>

    <string name="tardigrade_description">Tardigrades are a phylum of eight-legged segmented micro-animals. They were first described by the German zoologist Johann August Ephraim Goeze in 1773, who called them Kleiner Wasserbär ("little water bear").
In 1777, the Italian biologist Lazzaro Spallanzani named them Tardigrada (/tɑːrˈdɪɡrədə/), which means "slow steppers".
They have been found in diverse regions of Earth\'s biosphere – mountaintops, the deep sea, tropical rainforests, and the Antarctic.
Tardigrades are among the most resilient animals known, with individual species able to survive extreme conditions – such as exposure to extreme
temperatures, extreme pressures (both high and low), air deprivation, radiation, dehydration, and starvation – that would quickly kill most other known
forms of life. Tardigrades have survived exposure to outer space. There are about 1,300 known species in the phylum Tardigrada, a part of the superphylum
Ecdysozoa consisting of animals that grow by ecdysis such as arthropods and nematodes. The earliest known true members of the group are known from Cretaceous
(145 to 66 million years ago) amber, found in North America, but are essentially modern forms, and therefore likely have a significantly earlier origin,
as they diverged from their closest relatives in the Cambrian, over 500 million years ago.

\nTardigrades are usually about 0.5 mm (0.020 in) long when fully grown. They are short and plump, with four pairs of legs, each ending in claws
(usually four to eight) or suction disks. Tardigrades are prevalent in mosses and lichens and feed on plant cells, algae, and small invertebrates.
When collected, they may be viewed under a low-power microscope, making them accessible to students and amateur scientists.
    </string>

    <string name="phoronid_description">Phoronids are a small phylum of marine animals that filter-feed with a lophophore
(a "crown" of tentacles), and build upright tubes of chitin to support and protect their soft bodies. They live in most of the oceans and seas,
including the Arctic Ocean but excluding the Antarctic Ocean, and between the intertidal zone and about 400 meters down. Most adult phoronids are 2 cm long
and about 1.5 mm wide, although the largest are 50 cm long.
The name of the group comes from its type genus: Phoronis.
        \nPhoronids live in all the oceans and seas including the Arctic and excepting the Antarctic Ocean, and appear between the intertidal zone
and about 400 meters down. Some occur separately, in vertical tubes embedded in soft sediment such as sand, mud, or fine gravel. Others form tangled masses
of many individuals buried in or encrusting rocks and shells. In some habitats populations of phoronids reach tens of thousand of individuals per square
meter. The actinotroch larvae are familiar among plankton, and sometimes account for a significant proportion of the zooplankton biomass.
    </string>

    <string name="flatworm_description">The flatworms are a phylum of relatively simple bilaterian, unsegmented, soft-bodied invertebrates. Unlike other bilaterians, they are acoelomates
(having no body cavity), and have no specialized circulatory and respiratory organs, which restricts them to having flattened shapes that allow oxygen
and nutrients to pass through their bodies by diffusion. The digestive cavity has only one opening for both ingestion (intake of nutrients) and egestion
(removal of undigested wastes); as a result, the food cannot be processed continuously. In traditional medicinal texts, Platyhelminthes are divided into
Turbellaria, which are mostly non-parasitic animals such as planarians, and three entirely parasitic groups: Cestoda, Trematoda and Monogenea; however,
since the turbellarians have since been proven not to be monophyletic, this classification is now deprecated. Free-living flatworms are mostly predators,
and live in water or in shaded, humid terrestrial environments, such as leaf litter. Cestodes (tapeworms) and trematodes (flukes) have complex life-cycles,
with mature stages that live as parasites in the digestive systems of fish or land vertebrates, and intermediate stages that infest secondary hosts. The eggs
of trematodes are excreted from their main hosts, whereas adult cestodes generate vast numbers of hermaphroditic, segment-like proglottids that detach when
mature, are excreted, and then release eggs. Unlike the other parasitic groups, the monogeneans are external parasites infesting aquatic animals, and their
larvae metamorphose into the adult form after attaching to a suitable host.

\nBecause they do not have internal body cavities, Platyhelminthes were regarded as a primitive stage in the evolution of bilaterians
(animals with bilateral symmetry and hence with distinct front and rear ends). However, analyses since the mid-1980s have separated out one subgroup,
the Acoelomorpha, as basal bilaterians – closer to the original bilaterians than to any other modern groups. The remaining Platyhelminthes form a
monophyletic group, one that contains all and only descendants of a common ancestor that is itself a member of the group.</string>
</resources>