<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tardigrade"
        android:layout_width="370dp"
        android:layout_height="90dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/tardigrade_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tardigrade"
            android:background="@drawable/image_corners"
            android:clipToOutline="true"/>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tardigrade_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tardigrade" />

            <TextView
                android:id="@+id/tardigrade_description"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tardigrade_description" />

        </LinearLayout>


        <Button
            android:id="@+id/tardigrade_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:text="Details"
            android:textAllCaps="false" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/phoronid"
        android:layout_width="370dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tardigrade">


        <ImageView
            android:id="@+id/phoronid_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/phoronid"
            android:background="@drawable/image_corners"
            android:clipToOutline="true"/>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phoronid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/phoronid" />

            <TextView
                android:id="@+id/phoronid_description"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/phoronid_description" />

        </LinearLayout>


        <Button
            android:id="@+id/phoronid_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:text="Details"
            android:textAllCaps="false" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/flatworm"
        android:layout_width="370dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoronid">


        <ImageView
            android:id="@+id/flatworm_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/flatworm"
            android:background="@drawable/image_corners"
            android:clipToOutline="true"/>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/flatworm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/flatworm" />

            <TextView
                android:id="@+id/flatworm_description"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/flatworm_description" />

        </LinearLayout>

        <Button
            android:id="@+id/flatworm_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:text="Details"
            android:textAllCaps="false" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>